fixed alignment

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -90,7 +90,6 @@
 
 .card-container{
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
 }
